--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>uz_vue</title>
+    <title>Пасажири української залізниці | Texty.org.ua</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but uz_vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Будь ласка, активуйте JavaScript, щоб переглянути візуалізацію</strong>
     </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <main id="app"></main>
   </body>
 </html>
